@@ -9,6 +9,8 @@ import descent.internal.compiler.parser.Condition;
 import descent.internal.compiler.parser.ConditionalDeclaration;
 import descent.internal.compiler.parser.ConditionalStatement;
 import descent.internal.compiler.parser.DVCondition;
+import descent.internal.compiler.parser.Dsymbol;
+import descent.internal.compiler.parser.Dsymbols;
 import descent.internal.compiler.parser.IsExp;
 import descent.internal.compiler.parser.StaticIfCondition;
 import dtool.ast.ASTNeoNode;
@@ -22,12 +24,22 @@ public abstract class DeclarationConditional extends ASTNeoNode implements IStat
 	public NodeList elsedecls;
 
 	public static DeclarationConditional create(ConditionalDeclaration elem, ASTConversionContext convContext) {
+		doSetParent(elem, elem.decl);
+		doSetParent(elem, elem.elsedecl);
 		NodeList thendecls = NodeList.createNodeList(elem.decl, convContext); 
 		NodeList elsedecls = NodeList.createNodeList(elem.elsedecl, convContext);
-
+		
 		//assertTrue(!(thendecls == null && elsedecls == null));
 		Condition condition = elem.condition;
 		return createConditional(elem, thendecls, elsedecls, condition, convContext);
+	}
+	
+	public static void doSetParent(ASTDmdNode parent, Dsymbols children) {
+		if(children != null) {
+			for (Dsymbol dsymbol : children) {
+				dsymbol.setParent(parent);
+			}
+		}
 	}
 	
 	public static DeclarationConditional create(ConditionalStatement elem, ASTConversionContext convContext) {
@@ -39,10 +51,9 @@ public abstract class DeclarationConditional extends ASTNeoNode implements IStat
 		return createConditional(elem, thendecls, elsedecls, condition, convContext);
 	}
 
-	private static DeclarationConditional createConditional(
-			ASTDmdNode elem, NodeList thendecls,
-			NodeList elsedecls, Condition condition
-			, ASTConversionContext convContext) {
+	private static DeclarationConditional createConditional(ASTDmdNode elem, NodeList thendecls, NodeList elsedecls, 
+			Condition condition, ASTConversionContext convContext) 
+	{
 		if(condition instanceof DVCondition) {
 			return new DeclarationConditionalDV(elem, (DVCondition) condition, thendecls, elsedecls);
 		}
